--- a/app/src/main/res/layout/frag_home_employee.xml
+++ b/app/src/main/res/layout/frag_home_employee.xml
@@ -3,10 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/homeEmployeeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/homeEmployeeMainListView"
-        />
+        android:layout_height="match_parent">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/homeEmployeeMainListView"
+            />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </LinearLayout>
