--- a/app/src/main/res/layout/frag_blog.xml
+++ b/app/src/main/res/layout/frag_blog.xml
@@ -3,16 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/fragBlogRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/blogListView"
        />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
