--- a/app/src/main/res/layout/frag_user_resumes.xml
+++ b/app/src/main/res/layout/frag_user_resumes.xml
@@ -3,10 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/fragUserResumesRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragUserResumesListView"
         />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
