--- a/app/src/main/res/layout/frag_settings.xml
+++ b/app/src/main/res/layout/frag_settings.xml
@@ -3,20 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/mRefreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
-            android:id="@+id/mListView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
+    <ImageView
+        android:layout_width=""
+        android:layout_height="" />
+    <ImageView
+        android:layout_width=""
+        android:layout_height="" />
+    <ImageView
+        android:layout_width=""
+        android:layout_height="" />
+    <ImageView
+        android:layout_width=""
+        android:layout_height="" />
 
 
 
