--- a/app/src/main/res/layout/frag_settings.xml
+++ b/app/src/main/res/layout/frag_settings.xml
@@ -7,56 +7,10 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recyclerView"
+        android:id="@+id/main_RV"
         >
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/cv"
-            >
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                >
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:id="@+id/person_photo"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="16dp"
-                    android:src="@drawable/daisy_detail"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/person_name"
-                    android:layout_toRightOf="@+id/person_photo"
-                    android:layout_alignParentTop="true"
-                    android:textSize="30sp"
-                    android:text="Flower"
-                    android:textColor="@color/abc_input_method_navigation_guard"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/person_age"
-                    android:layout_toRightOf="@+id/person_photo"
-                    android:layout_below="@+id/person_name"
-                    android:text="25"
-                    android:textColor="@color/abc_input_method_navigation_guard"
-                    />
-
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
     </android.support.v7.widget.RecyclerView>
-
 
 
 </LinearLayout>
