--- a/app/src/main/res/layout/frag_blog.xml
+++ b/app/src/main/res/layout/frag_blog.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/fragBlogRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <ListView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/blogListView"
-       />
+        <ListView
+            android:id="@+id/blogListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:listSelector="@android:color/transparent" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
