--- a/app/src/main/res/layout/row_blog.xml
+++ b/app/src/main/res/layout/row_blog.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@android:drawable/dialog_holo_dark_frame"
+    >
 
     <TextView
         android:id="@+id/blogTitle"
@@ -27,6 +29,8 @@
         android:text="@string/blog_publication_date"
         android:layout_margin="10dp"
         android:textSize="18sp"
+
+        android:layout_marginBottom="15dp"
         />
 
 </LinearLayout>
